--- a/Demon_Slayer/Assembly-CSharp.csproj
+++ b/Demon_Slayer/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\DropShip_Script.cs" />
+     <Compile Include="Assets\Game_Manager_Script.cs" />
      <Compile Include="Assets\My_Assets\My_Scripts\Chase_Player.cs" />
      <Compile Include="Assets\My_Assets\My_Scripts\Game_Controller_Script.cs" />
      <Compile Include="Assets\My_Assets\My_Scripts\Player_Script.cs" />
@@ -54,7 +56,6 @@
      <Compile Include="Assets\My_Assets\My_Scripts\Spawn_Enemy_Script.cs" />
      <Compile Include="Assets\My_Assets\My_Scripts\TakeDamage_Script.cs" />
      <Compile Include="Assets\My_Assets\My_Scripts\Weapons_Class.cs" />
-     <Compile Include="Assets\SpaceCraft_Script.cs" />
      <None Include="Assets\FUTURE_BEEPS_LITE\Read_Me.txt" />
      <None Include="Assets\SciFi Gun Turret Set\Read Me.txt" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
